--- a/.circlci/config.yml
+++ b/.circlci/config.yml
@@ -61,7 +61,7 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
-    
+    checkout: post: - cp -r licenses/. /Users/macbookpro/Library/Android/licenses
     steps:
       - checkout
 
