--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: android
 jdk: oraclejdk8
 sudo: false
+yes | sdkmanager --licenses
+before_script:
+  - mkdir -p $ANDROID_HOME/licenses
+  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > $ANDROID_HOME/licenses/android-sdk-license
+  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $ANDROID_HOME/licenses/android-sdk-license
+  checkout: post: - cp -r licenses/. $ANDROID_HOME/licenses/android-sdk-license
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
