--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - mkdir -p $ANDROID_HOME/licenses
   - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > $ANDROID_HOME/licenses/android-sdk-license
   - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $ANDROID_HOME/licenses/android-sdk-license
-  checkout: post: - cp -r licenses/. $ANDROID_HOME/licenses/android-sdk-license
+  checkout: post: - cp -r licenses/* /usr/local/android-sdk-linux/licenses
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
