--- a/.circlci/config.yml
+++ b/.circlci/config.yml
@@ -30,7 +30,8 @@ jobs:
           - v1-dependencies-{{ checksum "build.gradle" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
+      - run: sdkmanager --licenses
+      sdkmanager --update && yes | sdkmanager --licenses
       - run: gradle dependencies
 
       - save_cache:
