--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,6 @@ env:
 
  - EMULATOR_API=21
 
- - ANDROID_BUILD_TOOLS=26.0.2
-
 android:
 
  components:
@@ -58,12 +56,12 @@ android:
 
  - google-gdk-license-.+
 
-before_install:
-
-- mkdir "$ANDROID_HOME/licenses" || true
-
-- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+#before_install:
+#
+#- mkdir "$ANDROID_HOME/licenses" || true
+#
+#- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+#- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 - chmod +x gradlew
 - ./gradlew dependencies || true
